--- a/src/main/resources/templates/job-detail.html
+++ b/src/main/resources/templates/job-detail.html
@@ -8,7 +8,10 @@
 
 <div class="container body-content">
 
-    <!-- // TODO #2 - display the job fields, one per row -->
+    <!-- // TO done #2 - display the job fields, one per row -->
+    <div th:if="${job}">
+        <table  th:replace="list-jobs :: single-job"></table>
+    </div>
 
 </div>
 
